Fix gap in logo when resolution is high

--- a/assets/styles/application.css
+++ b/assets/styles/application.css
@@ -140,7 +140,7 @@ div.actions {
 }
 .navbar-inner {
     min-height: 40px;
-    padding-left: 25px;
+    padding-left: 10px;
     padding-right: 20px;
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#fff2f2f2', GradientType=0);
     border: 1px solid #d4d4d4;
@@ -262,5 +262,4 @@ ul, ol {
     margin-left: 20px;
     width: 220px;
 }
-
 /* ===== END FOOTER ===== */
